# kdt-fortran

./: .gitattributes  .gitignore  CMakeLists.txt  KdTree.f90  LICENSE  Makefile  README.md  UPDATES.txt
src/: CMakeLists.txt  KdTree.f90  KdTreeFortran.f90
src/kdnode/: KdNodeDistance.f90  KdNodeGetters.f90  KdNodeId.c  KdNodeUtils.f90  NodeDistance.f90  NodeGetters.f90  NodeUtils.f90
src/kdtree/: BuildSubmod.f90  KdTreeBuild.f90  KdTreeGetters.f90  KdTreeModders.f90  KdTreeUtils.f90  RnnModule.f90  SearchSubmod.f90  TreeGetters.f90  TreeModder.f90  TreeUtils.f90
src/kdtree/search_modules/: KdTreeDBSCAN.f90  KdTreeLinScan.f90  KdTreeRnn.f90
src/node/: KdNodeModule.f90  NodeGetters.f90  NodePtrType.inc  NodePtrUtils.f90  NodeType.inc  NodeUtils.f90
src/node/NodeDistance/: NodeDistance.f90  NodeDistanceInterface.inc
src/node/NodeGetters/: NodeGetters.f90  NodeGettersInterface.inc
src/node/NodeUtils/: NodeUtils.f90  NodeUtilsInterface.inc
src/tree/: BuildSubmod.f90  HelpersSubmod.f90  KdTreeModule.f90  SearchSubmod.f90  TreeGetters.f90  TreeModder.f90  TreeType.inc  TreeUtils.f90
src/tree/BuildSubmod/: BuildSubmod.f90  BuildSubmodInterface.inc
src/tree/SearchSubmod/: SearchSubmod.f90  SearchSubmodInterface.inc
src/tree/TreeGetters/: TreeGettersInterface.inc
src/tree/TreeModder/: TreeModder.f90  TreeModderInterface.inc
src/tree/TreeUtils/: TreeUtils.f90  TreeUtilsInterface.inc
src/tree/search/: RnnModule.f90  SearchSubmod.f90
tests/: CMakeLists.txt  README.md  TestTree.f90
tests/v0/: CMakeLists.txt
tests/v0.1.0/: CMakeLists.txt  Testv010.f90  Testv010_COLLINEAR_ONE_AXIS_II.f90  Testv010_COLLINEAR_ONE_AXIS_III.f90  Testv010_DUPLICATES_FOUR_AXIS.f90  Testv010_DUPLICATES_ONE_AXIS.f90  Testv010_EMPTY.f90  Testv010_ONE_AXIS_ARRAY.f90  Testv010_ONE_POINT.f90  Testv010_THREE_AXIS_ARRAY.f90  Testv010_TWO_AXIS_ARRAY.f90  Testv010_TWO_POINTS.f90
tests/v0.1.0/Testv010_COLLINEAR/: CMakeLists.txt  Testv010_COLLINEAR_ONE_AXIS_I.f90  Testv010_COLLINEAR_TWO_AXIS_I_AXIS_II.f90  Testv010_COLLINEAR_TWO_AXIS_I_AXIS_III.f90
tests/v0.1.0/Testv010_DUPLICATES/: CMakeLists.txt  Testv010_DUPLICATES_THREE_AXIS.f90
tests/v0.1.0/Testv010_MULTI_AXIS/: Testv010_FOUR_AXIS_ARRAY.f90
tests/v0.1.0/Testv010_SIMPLE/: CMakeLists.txt
tests/v0.2.0/: CMakeLists.txt  Testv020_COLLINEAR_ONE_AXIS_III_RNN_CHEBYSHEV.f90  Testv020_COLLINEAR_ONE_AXIS_III_RNN_EUCLIDEAN.f90  Testv020_COLLINEAR_ONE_AXIS_III_RNN_MANHATTAN.f90  Testv020_COLLINEAR_ONE_AXIS_II_RNN_CHEBYSHEV.f90  Testv020_COLLINEAR_ONE_AXIS_II_RNN_EUCLIDEAN.f90  Testv020_COLLINEAR_ONE_AXIS_II_RNN_MANHATTAN.f90  Testv020_COLLINEAR_ONE_AXIS_I_RNN_CHEBYSHEV.f90  Testv020_COLLINEAR_ONE_AXIS_I_RNN_EUCLIDEAN.f90  Testv020_COLLINEAR_ONE_AXIS_I_RNN_MANHATTAN.f90  Testv020_COLLINEAR_TWO_AXIS_II_AXIS_III_RNN_CHEBYSHEV.f90  Testv020_COLLINEAR_TWO_AXIS_II_AXIS_III_RNN_EUCLIDEAN.f90  Testv020_COLLINEAR_TWO_AXIS_II_AXIS_III_RNN_MANHATTAN.f90  Testv020_COLLINEAR_TWO_AXIS_I_AXIS_III_RNN_CHEBYSHEV.f90  Testv020_COLLINEAR_TWO_AXIS_I_AXIS_III_RNN_EUCLIDEAN.f90  Testv020_COLLINEAR_TWO_AXIS_I_AXIS_III_RNN_MANHATTAN.f90  Testv020_COLLINEAR_TWO_AXIS_I_AXIS_II_RNN_CHEBYSHEV.f90  Testv020_COLLINEAR_TWO_AXIS_I_AXIS_II_RNN_EUCLIDEAN.f90  Testv020_COLLINEAR_TWO_AXIS_I_AXIS_II_RNN_MANHATTAN.f90  Testv020_DUPLICATES_FOUR_AXIS_RNN_CHEBYSHEV.f90  Testv020_DUPLICATES_FOUR_AXIS_RNN_EUCLIDEAN.f90  Testv020_DUPLICATES_FOUR_AXIS_RNN_MANHATTAN.f90  Testv020_DUPLICATES_ONE_AXIS_RNN_CHEBYSHEV.f90  Testv020_DUPLICATES_ONE_AXIS_RNN_EUCLIDEAN.f90  Testv020_DUPLICATES_ONE_AXIS_RNN_MANHATTAN.f90  Testv020_DUPLICATES_THREE_AXIS_RNN_CHEBYSHEV.f90  Testv020_DUPLICATES_THREE_AXIS_RNN_EUCLIDEAN.f90  Testv020_DUPLICATES_THREE_AXIS_RNN_MANHATTAN.f90  Testv020_DUPLICATES_TWO_AXIS_RNN_CHEBYSHEV.f90  Testv020_DUPLICATES_TWO_AXIS_RNN_EUCLIDEAN.f90  Testv020_DUPLICATES_TWO_AXIS_RNN_MANHATTAN.f90  Testv020_EMPTY_TREE_RNN_CENTROID.f90  Testv020_EMPTY_TREE_RNN_NODE.f90  Testv020_NODE_QUERY_CHEBYSHEV.f90  Testv020_NODE_QUERY_CHEBYSHEV_AXIS_MISMATCH.f90  Testv020_NODE_QUERY_CHEBYSHEV_UNALLOCATED.f90  Testv020_NODE_QUERY_EUCLIDEAN.f90  Testv020_NODE_QUERY_MANHATTAN.f90  Testv020_NODE_QUERY_MANHATTAN_AXIS_MISMATCH.f90  Testv020_NON_MEMBER_RNN_CENTROID.f90  (+19 more)
tests/v0.2.0/Testv020_ASSERTIONS/: Testv020_RNN_CENTROID_NEGATIVE_RADIUS.f90  Testv020_RNN_NODE_NEGATIVE_RADIUS.f90
tests/v0.2.0/Testv020_COLLINEAR_ONE/: CMakeLists.txt  Testv020_COLLINEAR_ONE_AXIS_III_RNN_EUCLIDEAN.f90  Testv020_COLLINEAR_ONE_AXIS_III_RNN_MANHATTAN.f90  Testv020_COLLINEAR_ONE_AXIS_II_RNN_CHEBYSHEV.f90  Testv020_COLLINEAR_ONE_AXIS_II_RNN_MANHATTAN.f90  Testv020_COLLINEAR_ONE_AXIS_I_RNN_CHEBYSHEV.f90  Testv020_COLLINEAR_ONE_AXIS_I_RNN_MANHATTAN.f90
tests/v0.2.0/Testv020_COLLINEAR_TWO/: CMakeLists.txt  Testv020_COLLINEAR_TWO_AXIS_II_AXIS_III_RNN_CHEBYSHEV.f90  Testv020_COLLINEAR_TWO_AXIS_II_AXIS_III_RNN_EUCLIDEAN.f90  Testv020_COLLINEAR_TWO_AXIS_II_AXIS_III_RNN_MANHATTAN.f90  Testv020_COLLINEAR_TWO_AXIS_I_AXIS_III_RNN_MANHATTAN.f90  Testv020_COLLINEAR_TWO_AXIS_I_AXIS_II_RNN_EUCLIDEAN.f90  Testv020_COLLINEAR_TWO_AXIS_I_AXIS_II_RNN_MANHATTAN.f90
tests/v0.2.0/Testv020_DUPLICATES/: Testv020_DUPLICATES_ONE_AXIS_RNN_CHEBYSHEV.f90  Testv020_DUPLICATES_THREE_AXIS_RNN_CHEBYSHEV.f90  Testv020_DUPLICATES_THREE_AXIS_RNN_EUCLIDEAN.f90  Testv020_DUPLICATES_THREE_AXIS_RNN_MANHATTAN.f90  Testv020_DUPLICATES_TWO_AXIS_RNN_CHEBYSHEV.f90  Testv020_DUPLICATES_TWO_AXIS_RNN_EUCLIDEAN.f90
tests/v0.2.0/Testv020_NODE_QUERY/: Testv020_NODE_QUERY_MANHATTAN.f90  Testv020_NODE_QUERY_MANHATTAN_UNALLOCATED.f90
tests/v0.2.0/Testv020_NON_MEMBER/: CMakeLists.txt
tests/v0.2.0/Testv020_POINT_QUERY/: CMakeLists.txt  Testv020_POINT_QUERY_MANHATTAN.f90  (+1 more)
tests/v0.2.1/: CMakeLists.txt  Testv021_EMPTY_RESULT_POPULATED_TREE_RNN_CENTROID_CHEBYSHEV.f90  Testv021_EMPTY_RESULT_POPULATED_TREE_RNN_CENTROID_MANHATTAN.f90  Testv021_EMPTY_RESULT_POPULATED_TREE_RNN_NODE_CHEBYSHEV.f90  Testv021_EMPTY_RESULT_POPULATED_TREE_RNN_NODE_DEFAULT.f90  Testv021_EMPTY_RESULT_POPULATED_TREE_RNN_NODE_EUCLIDEAN.f90  Testv021_EMPTY_RESULT_POPULATED_TREE_RNN_NODE_MANHATTAN.f90
(+528 files in other folders)
