add_executable(testv010_EMPTY Testv010_EMPTY.f90)
target_link_libraries(testv010_EMPTY PRIVATE kdtree)
add_test(NAME testv010_EMPTY COMMAND testv010_EMPTY)

add_executable(testv010_ONE_POINT Testv010_ONE_POINT.f90)
target_link_libraries(testv010_ONE_POINT PRIVATE kdtree)
add_test(NAME testv010_ONE_POINT COMMAND testv010_ONE_POINT)

add_executable(testv010_TWO_POINTS Testv010_TWO_POINTS.f90)
target_link_libraries(testv010_TWO_POINTS PRIVATE kdtree)
add_test(NAME testv010_TWO_POINTS COMMAND testv010_TWO_POINTS)

add_executable(testv010_ONE_AXIS_ARRAY Testv010_ONE_AXIS_ARRAY.f90)
target_link_libraries(testv010_ONE_AXIS_ARRAY PRIVATE kdtree)
add_test(NAME testv010_ONE_AXIS_ARRAY COMMAND testv010_ONE_AXIS_ARRAY)

add_executable(testv010_TWO_AXIS_ARRAY Testv010_TWO_AXIS_ARRAY.f90)
target_link_libraries(testv010_TWO_AXIS_ARRAY PRIVATE kdtree)
add_test(NAME testv010_TWO_AXIS_ARRAY COMMAND testv010_TWO_AXIS_ARRAY)

add_executable(testv010_THREE_AXIS_ARRAY Testv010_THREE_AXIS_ARRAY.f90)
target_link_libraries(testv010_THREE_AXIS_ARRAY PRIVATE kdtree)
add_test(NAME testv010_THREE_AXIS_ARRAY COMMAND testv010_THREE_AXIS_ARRAY)

add_executable(testv010_FOUR_AXIS_ARRAY Testv010_FOUR_AXIS_ARRAY.f90)
target_link_libraries(testv010_FOUR_AXIS_ARRAY PRIVATE kdtree)
add_test(NAME testv010_FOUR_AXIS_ARRAY COMMAND testv010_FOUR_AXIS_ARRAY)

add_executable(testv010_COLLINEAR_ONE_AXIS_I Testv010_COLLINEAR_ONE_AXIS_I.f90)
target_link_libraries(testv010_COLLINEAR_ONE_AXIS_I PRIVATE kdtree)
add_test(NAME testv010_COLLINEAR_ONE_AXIS_I COMMAND testv010_COLLINEAR_ONE_AXIS_I)

add_executable(testv010_COLLINEAR_ONE_AXIS_II Testv010_COLLINEAR_ONE_AXIS_II.f90)
target_link_libraries(testv010_COLLINEAR_ONE_AXIS_II PRIVATE kdtree)
add_test(NAME testv010_COLLINEAR_ONE_AXIS_II COMMAND testv010_COLLINEAR_ONE_AXIS_II)

add_executable(testv010_COLLINEAR_ONE_AXIS_III Testv010_COLLINEAR_ONE_AXIS_III.f90)
target_link_libraries(testv010_COLLINEAR_ONE_AXIS_III PRIVATE kdtree)
add_test(NAME testv010_COLLINEAR_ONE_AXIS_III COMMAND testv010_COLLINEAR_ONE_AXIS_III)

add_executable(testv010_COLLINEAR_TWO_AXIS_I_AXIS_II Testv010_COLLINEAR_TWO_AXIS_I_AXIS_II.f90)
target_link_libraries(testv010_COLLINEAR_TWO_AXIS_I_AXIS_II PRIVATE kdtree)
add_test(NAME testv010_COLLINEAR_TWO_AXIS_I_AXIS_II COMMAND testv010_COLLINEAR_TWO_AXIS_I_AXIS_II)

add_executable(testv010_COLLINEAR_TWO_AXIS_I_AXIS_III Testv010_COLLINEAR_TWO_AXIS_I_AXIS_III.f90)
target_link_libraries(testv010_COLLINEAR_TWO_AXIS_I_AXIS_III PRIVATE kdtree)
add_test(NAME testv010_COLLINEAR_TWO_AXIS_I_AXIS_III COMMAND testv010_COLLINEAR_TWO_AXIS_I_AXIS_III)

add_executable(testv010_COLLINEAR_TWO_AXIS_II_AXIS_III Testv010_COLLINEAR_TWO_AXIS_II_AXIS_III.f90)
target_link_libraries(testv010_COLLINEAR_TWO_AXIS_II_AXIS_III PRIVATE kdtree)
add_test(NAME testv010_COLLINEAR_TWO_AXIS_II_AXIS_III COMMAND testv010_COLLINEAR_TWO_AXIS_II_AXIS_III)


add_executable(testv010_DUPLICATES_ONE_AXIS Testv010_DUPLICATES_ONE_AXIS.f90)
target_link_libraries(testv010_DUPLICATES_ONE_AXIS PRIVATE kdtree)
add_test(NAME testv010_DUPLICATES_ONE_AXIS COMMAND testv010_DUPLICATES_ONE_AXIS)

add_executable(testv010_DUPLICATES_TWO_AXIS Testv010_DUPLICATES_TWO_AXIS.f90)
target_link_libraries(testv010_DUPLICATES_TWO_AXIS PRIVATE kdtree)
add_test(NAME testv010_DUPLICATES_TWO_AXIS COMMAND testv010_DUPLICATES_TWO_AXIS)

add_executable(testv010_DUPLICATES_THREE_AXIS Testv010_DUPLICATES_THREE_AXIS.f90)
target_link_libraries(testv010_DUPLICATES_THREE_AXIS PRIVATE kdtree)
add_test(NAME testv010_DUPLICATES_THREE_AXIS COMMAND testv010_DUPLICATES_THREE_AXIS)

add_executable(testv010_DUPLICATES_FOUR_AXIS Testv010_DUPLICATES_FOUR_AXIS.f90)
target_link_libraries(testv010_DUPLICATES_FOUR_AXIS PRIVATE kdtree)
add_test(NAME testv010_DUPLICATES_FOUR_AXIS COMMAND testv010_DUPLICATES_FOUR_AXIS)
