add_subdirectory(Testv020_NODE_QUERY)
add_subdirectory(Testv020_POINT_QUERY)
add_subdirectory(Testv020_EMPTY_TREE)
add_subdirectory(Testv020_NON_MEMBER)
add_subdirectory(Testv020_SINGLE_NODE_QUERY)
add_subdirectory(Testv020_ASSERTIONS)
add_subdirectory(Testv020_DUPLICATES)
add_subdirectory(Testv020_COLLINEAR_ONE)
add_subdirectory(Testv020_COLLINEAR_TWO)

