add_subdirectory(Testv021_TREE_GETTERS)
add_subdirectory(Testv021_BUFFER_SIZE)
add_subdirectory(Testv021_IS_MEMBER)
add_subdirectory(Testv021_EMPTY_RESULT_POPULATED_TREE)
add_subdirectory(Testv021_ZERO_RADIUS_POPULATED_TREE)
add_subdirectory(Testv021_DATA_INPUT)
add_subdirectory(Testv021_NODEPTR_LIFECYCLE)
add_subdirectory(Testv021_LIFECYCLE)
