add_subdirectory(Testv030_ADD_NODES_ASSERTIONS)
add_subdirectory(Testv030_ADD_NODES_GETTERS)
add_subdirectory(Testv030_ADD_NODES_LIFECYCLE)
add_subdirectory(Testv030_ADD_NODES_IS_MEMBER)
add_subdirectory(Testv030_ADD_NODES_RNN_CENTROID)
add_subdirectory(Testv030_ADD_NODES_RNN_NODE)
add_subdirectory(Testv030_ADD_NODES_DATA)
add_subdirectory(Testv030_ADD_NODES_REBUILD)
add_subdirectory(Testv030_ADD_NODES_DUPLICATES)
add_subdirectory(Testv030_ADD_NODES_COLLINEAR)
add_subdirectory(Testv030_ADD_NODES_MULTI_ADD)
add_subdirectory(Testv030_ADD_NODES_SET_REBUILD_RATIO)
add_subdirectory(Testv030_ADD_NODES_NUM_MODS)
add_subdirectory(Testv030_ADD_NODES_INCREMENTAL)
add_subdirectory(Testv030_ADD_NODES_REBUILD_BOUNDARY)
add_subdirectory(Testv030_ADD_NODES_ZERO_ADD)

add_subdirectory(Testv030_MULTITHREAD_SIMPLE)
add_subdirectory(Testv030_MULTITHREAD_INTERNAL_STATE)
add_subdirectory(Testv030_MULTITHREAD_INDEPENDENT_TREES)
add_subdirectory(Testv030_MULTITHREAD_CONCURRENT_ADD)
add_subdirectory(Testv030_MULTITHREAD_CONCURRENT_RNN)
add_subdirectory(Testv030_MULTITHREAD_ADD_NODES)
add_subdirectory(Testv030_MULTITHREAD_V010)
add_subdirectory(Testv030_MULTITHREAD_V020)
add_subdirectory(Testv030_MULTITHREAD_V021)
