add_subdirectory(Testv050_RMV_NODES_ASSERTIONS)
add_subdirectory(Testv050_RMV_NODES_LIFECYCLE)
add_subdirectory(Testv050_RMV_NODES_INTERNAL_STATE)
add_subdirectory(Testv050_RMV_NODES_IS_MEMBER)
add_subdirectory(Testv050_RMV_NODES_REBUILD)
add_subdirectory(Testv050_RMV_NODES_COORDS)
add_subdirectory(Testv050_RMV_NODES_IDS)
add_subdirectory(Testv050_RMV_NODES_COORDS_IDS)
add_subdirectory(Testv050_RMV_NODES_RAD)
add_subdirectory(Testv050_RMV_NODES_RAD_IDS)

add_subdirectory(Testv050_MULTITHREAD_INTERNAL_STATE)
add_subdirectory(Testv050_MULTITHREAD_CONCURRENT_RMV)

add_subdirectory(Testv050_GET_ALL_NODES)
add_subdirectory(Testv050_GET_ALL_COORDS)
add_subdirectory(Testv050_MULTITHREAD_GET_ALL)

add_subdirectory(Testv050_LIN_SCAN)
add_subdirectory(Testv050_RNN_RAD)
add_subdirectory(Testv050_RNN_RAD_IDS)
add_subdirectory(Testv050_MULTITHREAD_SEARCH)
